; ModuleID = '/home/carl/AnghaBench/i3/i3-config-wizard/extr_main.c_keysym_used_on_other_key.c'
source_filename = "/home/carl/AnghaBench/i3/i3-config-wizard/extr_main.c_keysym_used_on_other_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64 }

@conn = common dso_local global i32 0, align 4
@keysyms = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64)* @keysym_used_on_other_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @keysym_used_on_other_key(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %10 = load i32, i32* @conn, align 4
  %11 = call %struct.TYPE_2__* @xcb_get_setup(i32 %10)
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %7, align 8
  %14 = load i32, i32* @conn, align 4
  %15 = call %struct.TYPE_2__* @xcb_get_setup(i32 %14)
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  store i64 %17, i64* %8, align 8
  %18 = load i64, i64* %7, align 8
  store i64 %18, i64* %6, align 8
  br label %19

19:                                               ; preds = %50, %2
  %20 = load i64, i64* %6, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %19
  %23 = load i64, i64* %6, align 8
  %24 = load i64, i64* %8, align 8
  %25 = icmp sle i64 %23, %24
  br label %26

26:                                               ; preds = %22, %19
  %27 = phi i1 [ false, %19 ], [ %25, %22 ]
  br i1 %27, label %28, label %53

28:                                               ; preds = %26
  %29 = load i64, i64* %6, align 8
  %30 = load i64, i64* %5, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %28
  br label %50

33:                                               ; preds = %28
  store i32 0, i32* %9, align 4
  br label %34

34:                                               ; preds = %46, %33
  %35 = load i32, i32* %9, align 4
  %36 = icmp slt i32 %35, 4
  br i1 %36, label %37, label %49

37:                                               ; preds = %34
  %38 = load i32, i32* @keysyms, align 4
  %39 = load i64, i64* %6, align 8
  %40 = load i32, i32* %9, align 4
  %41 = call i64 @xcb_key_symbols_get_keysym(i32 %38, i64 %39, i32 %40)
  %42 = load i64, i64* %4, align 8
  %43 = icmp ne i64 %41, %42
  br i1 %43, label %44, label %45

44:                                               ; preds = %37
  br label %46

45:                                               ; preds = %37
  store i32 1, i32* %3, align 4
  br label %54

46:                                               ; preds = %44
  %47 = load i32, i32* %9, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %9, align 4
  br label %34

49:                                               ; preds = %34
  br label %50

50:                                               ; preds = %49, %32
  %51 = load i64, i64* %6, align 8
  %52 = add nsw i64 %51, 1
  store i64 %52, i64* %6, align 8
  br label %19

53:                                               ; preds = %26
  store i32 0, i32* %3, align 4
  br label %54

54:                                               ; preds = %53, %45
  %55 = load i32, i32* %3, align 4
  ret i32 %55
}

declare dso_local %struct.TYPE_2__* @xcb_get_setup(i32) #1

declare dso_local i64 @xcb_key_symbols_get_keysym(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
